# sandbox

./: LICENSE  README.md  etag_multipart.py
docker/: Dockerfile
docker/rpm/: Dockerfile  Makefile  README.md
go/stdin/: main.go
go/stdin/chunks/: Makefile  chunks.go  chunks_test.go
go/stdin/is_stdin/: main.go
go/stdin/read/: Makefile  main.go
go/stdin/scanner/: Makefile  main.go  out.json
rust/CompleteMultipartUpload/: Cargo.toml
rust/CompleteMultipartUpload/src/: main.rs
rust/FuturesUnordered/: Cargo.toml
rust/FuturesUnordered-while/: Cargo.toml
rust/FuturesUnordered-while/src/: main.rs
rust/FuturesUnordered/src/: main.rs
rust/auto_part/: Cargo.toml
rust/auto_part/src/: main.rs
rust/bar/: Cargo.toml
rust/bar/src/: main.rs
rust/blake2/: Cargo.toml
rust/blake2/src/: main.rs
rust/blake2_tokio/: Cargo.toml
rust/blake2_tokio/src/: main.rs
rust/futures-chain/: Cargo.toml
rust/futures-chain/src/: main.rs
rust/is_stdin/: Cargo.toml
rust/is_stdin/src/: main.rs
rust/num_cpus/: Cargo.toml
rust/num_cpus/src/: main.rs
rust/parts/src/: main.rs
rust/parts2/: Cargo.toml
rust/parts2/src/: main.rs
rust/read_chunk/: Cargo.toml
rust/read_chunk/src/: main.rs
rust/read_speed_FuturesUnordered/: Cargo.toml
rust/read_speed_FuturesUnordered/src/: main.rs
rust/read_speed_single_thread/: Cargo.toml
rust/read_speed_single_thread/src/: main.rs
rust/read_speed_tokio/: Cargo.toml
rust/read_speed_tokio/src/: main.rs
rust/seek/: Cargo.toml
rust/seek/src/: main.rs
rust/seek2/src/: main.rs
rust/seek3/: Cargo.toml
rust/seek3/src/: main.rs
rust/sha256/: Cargo.toml
rust/sha256/src/: main.rs
rust/sled/: Cargo.toml
rust/sled/src/: main.rs
rust/stdin/: Cargo.toml
rust/stdin-speed/: Cargo.toml
rust/stdin-speed/src/: main.rs
rust/stdin/src/: main.rs
rust/stream_chunks/src/: main.rs
rust/stream_chunks_reqwest/src/: main.rs
rust/xml/: Cargo.toml
rust/xml/src/: main.rs
script/: 550mb.sh  firewall_toggle.sh
