[package]
name = "seek"
version = "0.1.0"
authors = ["nbari <nbari@tequila.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
tokio-util = "0.3"
reqwest = { version = "0.10.7", features = ["stream"] }
futures = "0.3.5"
