[package]
name = "seek"
version = "0.1.0"
authors = ["nbari <nbari@tequila.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2s_simd = "0.5.10"
futures = "0.3.5"
ring = "0.16.15"
tokio = { version = "0.2", features = ["full"] }
rayon = "1.3.1"
blake3 = { version = "0.3", features = ["rayon"] }
